# url-shortener-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 18d07018be2c_create_links_table.py  2da3212787b4_create_api_keys_table.py  40899879b5a5_add_link_ownership.py  442031ae7173_create_links_table.py  7d64a3e5ff1d_create_links_table.py
loadtest/: redirect-heavy.k6.js
scripts/: create_api_key.py
src/url_shortener_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/urlshortenerapi/: main.py
src/urlshortenerapi/api/: deps.py  routes.py
src/urlshortenerapi/core/: config.py  errors.py  link_rules.py  redis.py
src/urlshortenerapi/db/: models.py  session.py
src/urlshortenerapi/schemas/: links.py
src/urlshortenerapi/services/: rate_limiter.py
tests/: conftest.py  test_errors.py  test_links.py
tests/unit/: test_code_generation.py  test_link_rules.py  test_rate_limiter.py  test_validation.py
